--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 
 dependencies:
   - python=3.6
-  - pymatgen=2021.2.8.1
+  - pymatgen>=2022.0.0
   - numpy=1.18.5
   - tqdm=4.61.1
   - pip
