--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ __pycache__/
 
 /out/
 
+out_final/species_prop/skipatom/induced/datasets/
+out_final/species_prop/skipatom/induced/models/
+out_final/species_prop/skipspecies/induced/datasets/
+out_final/species_prop/skipspecies/induced/models/
+out_final/species_prop/skipspecies/non_induced/datasets/
+out_final/species_prop/skipspecies/non_induced/models/
+
 */models/*
 */datasets/*
 .idea/
